[package]
name = "packet_rewriter"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = {  version = "2.2.0", features = ["tokio", "lending-iter", "futures"]}
pnet = "0.35.0"
clap = { version = "4.5.32", features = ["derive"] }
thiserror = "2.0.12"
dns-parser = { path = "dns-parser" }
log = "0.4.27"
env_logger = "0.11.8"
dotenvy = "0.15.7"
